--- a/index.css
+++ b/index.css
@@ -140,10 +140,12 @@ h2 {
     margin-bottom: 0;
     padding: 10px 0;
     color: black;
+    max-width: 150px;
+    font-size: 1rem;
 }
 
 .footer a {
-    text-decoration: none;
+    color: black;
 }
 
 .callToActionWrapper {
